fixed safari not scrolling on shift - pano slider

--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -62,7 +62,7 @@
 
 @mixin slider-base {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   white-space: nowrap;
   width: 100vw;
 }
